# git-hud

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.sh  next.config.ts  package.json  v2-plan-claude-ai.md  v2-plan.md
.claude/: statusline.mjs
.github/workflows/: ci.yml  release.yaml  release.yml
.memory/basic/projects/: git-hud Project Overview.md
.memory/basic/projects/git-hud/: git-hud v2 Documentation Structure.md
cli/: index.ts  index.tsx
crates/grove-api/: Cargo.toml  README.md
crates/grove-api/src/: lib.rs  mcp.rs  routes.rs  static_files.rs
crates/grove-cli/: Cargo.toml  README.md
crates/grove-cli/src/: main.rs  updater.rs
crates/grove-core/: Cargo.toml  README.md
crates/grove-core/src/: config.rs  db.rs  git.rs  install.rs  lib.rs  schema.sql  state.rs  types.rs
crates/grove-tui/: Cargo.toml  README.md
crates/grove-tui/src/: app.rs  lib.rs  ui.rs
docs/: API.md  ARCHITECTURE.md  CLI.md  DATABASE.md  DEPLOYMENT.md  GIT_OPERATIONS.md  README.md  STATE_MANAGEMENT.md
docs/.archive/: DEPLOYMENT-planning.md
docs/.archive/v1/: DEPLOYMENT.md  README.md  STATE_MANAGEMENT.md  WORKTREE_FLOW_MANAGEMENT.md  rust-rewrite-plan.md  v1-spec.md  v2-plan-claude-ai.md
scripts/: build.sh  install.sh  stress-test-grow.ts  stress-test-sse.ts  stress-test-ui.ts  stress-test.ts
src/app/: actions.ts  globals.css  layout.tsx
src/app-shell/: clone-button.tsx  footer.tsx  header.tsx  theme-toggle.tsx
src/app/api/clone/: route.ts
src/app/api/open/: route.ts
src/app/api/refresh/: route.ts
src/app/api/repositories/: route.ts
src/app/api/state/: route.ts
src/app/api/worktree/: route.ts
src/app/api/worktree/[path]/stream/: route.ts
src/app/home/: page.tsx
src/app/home/components/: empty-state.tsx  repositories-loader.tsx  repository-table.tsx
src/app/mcp/: route.ts
src/components/: Dashboard.tsx
src/lib/: __test__.ts  clone.ts  db.ts  git.ts  parse-git-url.ts  repository.ts  seed.ts  state.ts  types.ts  worktree.ts
