[package]
name = "grove-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Terminal chat UI for grove"

[dependencies]
grove-core = { path = "../grove-core" }

# TUI
ratatui = { workspace = true }
crossterm = { workspace = true }
tui-textarea = { workspace = true }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP client (for LLM API)
reqwest = { workspace = true }
reqwest-eventsource = { workspace = true }

# Utilities
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
